# policylens

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pyre_configuration  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  pyrightconfig.json  requirements.txt  test_e2e.py
.agent/workflows/: rag-engine-build.md
.github/workflows/: sync-to-hf.yml
api/: main.py  schemas.py
api/routes/: health.py  ingest.py  query.py
backend/: .env.example  diag_node.js  package-lock.json  package.json
backend/src/: index.js
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
rag_engine/: __init__.py  main.py
rag_engine/chunking/: base_chunker.py  clause_chunker.py  table_chunker.py  token_utils.py
rag_engine/config/: __init__.py  constants.py  settings.py
rag_engine/embeddings/: base_embedder.py  embedding_factory.py  jina_embedder.py  local_embedder.py
rag_engine/ingestion/: cleaner.py  pdf_loader.py  pipeline.py
rag_engine/llm/: base_llm.py  gemini_llm.py  groq_llm.py  kimi_llm.py  llm_factory.py
rag_engine/prompts/: context_template.py  response_format.py  system_prompt.py
rag_engine/retrieval/: context_builder.py  query_preprocessor.py  reranker.py  retriever.py
rag_engine/schemas/: chunk_metadata.py
rag_engine/services/: ingestion_service.py  query_service.py  summary_service.py
rag_engine/tests/: test_chunker.py  test_evaluation.py  (+3 more)
supabase_migrations/: 001_vector_store.sql  002_policy_summaries.sql  003_users.sql  005_chat_history.sql  README.md
(+19 files in other folders)
