[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-engine"
version = "0.1.0"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_engine*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"
